????-??-??:
 - Do not distribute generated parser files
 - Check for libgpg-error. Link against it when needed.
 - Distribute README.txt
 - Added ChangeLog

2011-11-30: Version 0.3.0
 - First release